Further work on screen refactor